# personality-bot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.yml  docker-compose.yml  domain.yml  endpoints.yml  pull_request_template.md  pyproject.toml  setup.cfg
.circleci/: config.yml
actions/: actions.py
configs/k8s/: config.yml  credentials.yml  endpoints-rasa-prod.yml  endpoints.yml
configs/local/: config.yml  credentials.yml
data/: rules.yml
data/nlu/: nlu.yml
data/stories/: chitchats.yml  stories.yml
demo/local/: index.html  style.css
demo/prod/: index.html
deployment/: certificates.yml  cluster-issuer.yml  namespace.yml
deployment/callback-server/: deployment.yml  service.yml
deployment/demo/: deployment.yml  ingress.yml  service.yml
deployment/duckling/: deployment.yml  service.yml
deployment/elasticsearch/: deployment.yml  service.yml
deployment/event-consumer/: deployment.yml
deployment/kibana/: deployment.yml  ingress.yml  service.yml
deployment/rabbitmq/: deployment.yml  service.yml
deployment/rasa-actions/: deployment.yml  service.yml
deployment/rasa-prod/: rasa-prod-deployment.yml  rasa-prod-ingress.yml  rasa-prod-service.yml
deployment/rasa-x/: rasa-x-deployment.yml  rasa-x-ingress.yml  rasa-x-service.yml
docker/: Dockerfile
elastic_search/: docker-compose.yml
src/dash_ecomm/: constants.py  custom_socketio.py  database.yml  database_utils.py  e-comm-products.xlsx  elastic_search_data_upload.py  (+4 more)
tests/: test_stories.yml
utility-scripts/: build-and-push-image-for-release.sh  initialize_db.py
